Fix Java 8 compatibility in SecurityConfig by replacing List.of with Arrays.asList